--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
     "bootstrap": "^5.0.1",
+    "lighthouse": "^9.6.1",
     "react": "^18.1.0",
     "react-aws-s3": "^1.5.0",
     "react-dom": "^18.1.0",
